--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
    
    
    <hr>
-   <div id="local-videos-container">
+   <div id="local-videos-container" style="width:300px; height:200px; background: #000">
    
    </div>
    
-   <hr>
-   <div id="remote-videos-container">
+   <hr/>
+   <div id="remote-videos-container" style="width:300px; height:200px; background: #000">
    
    </div>
    <script>
