--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
    
    
    <hr>
-   <div id="local-videos-container" style="width:300px; height:200px; background: #000">
+   <div id="local-videos-container" style="width:300px; height:200px; background: #000; float: left">
    
    </div>
    
-   <hr/>
-   <div id="remote-videos-container" style="width:300px; height:200px; background: #000">
+   <div id="remote-videos-container" style="width:300px; height:200px; background: #000; float: left; margin-left: 50px; border-left: 1px solid #ccc">
    
    </div>
    <script>
