--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <script src="https://rtcmulticonnection.herokuapp.com/socket.io/socket.io.js"></script>
    
    <input id="txt-roomid" placeholder="Unique Room ID">
-   <button id="btn-open-or-join-room">
+   <button id="btn-open-or-join-room" style="margin-bottom:20px;">
    Open or join Room
    </button
    
