--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
    </button
    
    
-   <hr>
+   <hr >
+   <div style="overflow: hidden">
+   
    <div id="local-videos-container" style="width:300px; height:200px; background: #000; float: left">
    
    </div>
    
    <div id="remote-videos-container" style="width:300px; height:200px; background: #000; float: left; margin-left: 50px; border-left: 1px solid #ccc">
    
+   </div>
    </div>
    <script>
    var connection = new RTCMultiConnection();
