--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-
+<style>
+video{width:300px; height: 300px; display: block; float: left; border: 5px solid #ccc}
+</style>
    
    <script src="https://rtcmulticonnection.herokuapp.com/dist/RTCMultiConnection.min.js"></script>
 <script src="https://rtcmulticonnection.herokuapp.com/socket.io/socket.io.js"></script>
