--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ video{width:300px; height: 300px; display: block; float: left; border: 5px solid
    var connection = new RTCMultiConnection();
 
 // this line is VERY_important
-connection.socketURL = 'https://ajaynp.github.io/WebRTC:443/';
+connection.socketURL = 'https://rtcmulticonnection.herokuapp.com:443/';
 
 // all below lines are optional; however recommended.
 
